Fix issue: On mobile the dynamic cards hide the remove from cart button.

--- a/assets/src/scss/frontend.scss
+++ b/assets/src/scss/frontend.scss
@@ -249,3 +249,9 @@ table.extra-options {
 		}
 	}
 }
+
+.woocommerce-cart {
+	.remove {
+		z-index: 1;
+	}
+}
